--- a/section07/css/index.css
+++ b/section07/css/index.css
@@ -75,27 +75,32 @@
   min-width: 320px;
 }
 
-.filter {
-  flex-basis: 100%;
-  position: sticky;
-  top: 80px;
-  left: 0px;
-  z-index: 99;
+.controls {
+  gap: var(--gap-sm);
+  align-items: flex-start;
 }
 
-.filter select {
-  width: 120px;
-  height: 40px;
-  border-radius: var(--radius-sm);
-  border-color: var(--gray-300);
-  color: var(--gray-900);
-  font-size: 16px;
-  font-weight: var(--weight-medium);
-  padding: var(--gap-xxs) var(--gap-xs);
-  appearance: none;
-  background-image: url('../assets/images/icon_arrow_down.svg');
-  background-repeat: no-repeat;
-  background-position: right 12px center;
+.search {
+  flex-grow: 1;
+  position: relative;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 19px;
+  transform: translateY(-50%);
+}
+
+.search-bar {
+  width: 100%;
+  max-width: 320px;
+  height: 48px;
+  border-radius: var(--gap-lg);
+  border: 1px solid var(--gray-300);
+  color: var(--gray-400);
+  font-size: 1.6rem;
+  padding-left: 4.8rem;
 }
 
 .show-modal-add {
@@ -312,4 +317,27 @@
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: cubic-bezier(0, 0.52, 0.77, 1.16);
+}
+
+@media (max-width: 360px) {
+  .controls {
+    flex-wrap: wrap;
+  }
+
+  .search {
+    order: 1;
+    flex-basis: 100%;
+  }
+
+  .search-bar {
+    height: 40px;
+  }
+
+  .filter {
+    order: 2;
+  }
+
+  .show-modal-add {
+    order: 3;
+  }
 }
