[240909] 무한스크롤 만들어 주세요.(스크롤 이 마지막에 도달했을 때 10개 단위씩 추가로 리스트업 되어야 합니다.)

--- a/styles/diary.css
+++ b/styles/diary.css
@@ -98,6 +98,7 @@ main .main-content ul#photoList {
   flex-direction: column;
   align-items: center;
   row-gap: 2.5rem;
+  padding-bottom: 3rem;
 }
 main .main-content ul#diaryList {
   width: 100%;
@@ -708,6 +709,7 @@ textarea {
 }
 
 .search_wrapper {
+  background-color: white;
   display: flex;
   align-items: center;
   border: 1px solid #c7c7c7;
