--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,34 @@
 :root {
+  --basic-font-color: #000; // #fff
+  --basic-bg-color: #fff; // #000
+
+  --input-border-color: #c7c7c7; // #777
+  --input-bg-color: #fff; // #1c1c1c
+  --input-font-color: #000; // #fff
+  --input-placeholder-color: #ababab; // #777
+
+  --popup-bg-color: #fff; // #333
+
+  --list-border-color: #fff; //#f5f5f5
+
+  --button-white-btn-bg: #fff; // #1c1c1c
+  --button-white-btn-color: #000; // #f5f5f5
+  --button-black-btn-bg: #000; // #f2f2f2
+  --button-black-btn-color: #fff; // #000
+
+  --button-border-color: #000; // #f5f5f5
+  --button-disabled-color: #f2f2f2; // #777
+
+  --radio-input-color: #000; // #fff
+
+  --input-active-color: #299c00;
+  --input-active-bg: url("../img/check_outline_light_xs.svg");
+  --down-fill-bg: url("../img/down_fill_light_m.svg");
+
+  --plus-icon: url("../img/plus_outline_light_m.svg");
+
+  --input-radio-color: #777;
+
   --font-color-1: #28b4e1;
   --font-color-2: #d59029;
   --font-color-3: #777777;
@@ -9,6 +39,7 @@
   --font-color-8: #1c1c1c;
   --font-color-9: #299c00;
 
+  --bg-color-basic: #fff;
   --bg-color-1: #f2f2f2;
   --bg-color-2: #c7c7c7;
   --bg-color-3: rgba(58, 181, 15, 0.05);
@@ -19,7 +50,7 @@
   --mood-color-4: #ffe4e5;
   --mood-color-5: #ead2f9;
 
-  --border-color-1: #d4d3d3;
+  --border-color-1: #d4d3d3; // #333
   --border-color-2: #c7c7c7;
 
   --font-size-1: 0.875rem; // 14px
@@ -31,6 +62,40 @@
     "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
 
   --max-width: 73rem; // 1168px
+}
+
+[lightStatus="off"] {
+  --basic-font-color: #fff;
+  --basic-bg-color: #000;
+
+  --input-border-color: #333;
+  --input-bg-color: #000;
+  --input-font-color: #c7c7c7;
+  --input-placeholder-color: #777;
+
+  --popup-bg-color: #1c1c1c;
+
+  --list-border-color: #5f5f5f;
+
+  --button-white-btn-bg: #1c1c1c;
+  --button-white-btn-color: #f5f5f5;
+  --button-black-btn-bg: #f2f2f2;
+  --button-black-btn-color: #000;
+
+  --radio-input-color: #fff;
+
+  --input-active-color: #fff;
+  --input-active-bg: url("../img/check_outline_dark_xs.svg");
+  --down-fill-bg: url("../img/down_fill_dark_m.svg");
+
+  --plus-icon: url("../img/plus_outline_dark_m.svg");
+
+  --input-radio-color: #c7c7c7;
+
+  --button-border-color: #5f5f5f;
+  --button-disabled-color: #777;
+
+  --bg-color-3: #1c1c1c;
 }
 
 @view-transition {
@@ -118,13 +183,14 @@ html {
 }
 html,
 body {
-  color: #000;
   letter-spacing: -0.1px;
   padding-bottom: var(--footerHeight);
   scroll-behavior: smooth;
 }
 
 body {
+  color: var(--basic-font-color);
+  background-color: var(--basic-bg-color);
   font-family: var(--font-family);
   font-size: var(--font-size-1);
   overflow-x: hidden;
@@ -144,17 +210,54 @@ nav,
 header {
   height: 60px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 24px;
+
   h1 {
     font-weight: 700;
     font-size: var(--font-size-2);
   }
 
+  label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+}
+
+.toggleWrap {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
   .toggleSwitch {
-    input {
-      appearance: none;
-      position: relative;
+    appearance: none;
+    width: 40px;
+    height: 24px;
+    border-radius: 20px;
+    background-color: lightgray;
+    position: relative;
+
+    &:checked {
+      background-color: #3ad84a;
+      &::before {
+        left: calc(100% - 22px);
+      }
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      width: 20px;
+      height: 20px;
+      background-color: white;
+      border-radius: 50%;
+      position: absolute;
+      left: 2px;
+      top: 2px;
+      background-color: white;
+      transition: left 0.3s;
     }
   }
 }
@@ -254,7 +357,7 @@ nav {
 
       &.active {
         font-weight: bold;
-        border-bottom: 2px solid #000;
+        border-bottom: 2px solid var(--basic-font-color);
       }
     }
   }
@@ -263,6 +366,7 @@ nav {
 footer {
   background-color: var(--bg-color-1);
   padding: 24px 0;
+  color: #000;
 
   .footerInner {
     display: flex;
@@ -274,12 +378,16 @@ footer {
 .diaryWrite {
   // max-width: 22.5rem;
   border-radius: 16px;
-
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 24px;
+
+  .diaryWriteHeader {
+    display: flex;
+    justify-content: space-between;
+  }
 
   .diaryWriteInner {
     display: flex;
@@ -298,8 +406,16 @@ footer {
       border-radius: 8px;
       font-size: var(--font-size-2);
 
+      &:disabled {
+        background-color: var(--input-border-color); // c7c7c7
+        color: var(--button-disabled-color); //f2f2f2;
+        border: 1px solid var(--input-border-color);
+      }
+
       &.popupClose {
-        background-color: #fff;
+        background-color: var(--popup-bg-color);
+        border: 1px solid var(--button-border-color);
+        color: var(--basic-font-color);
       }
     }
   }
@@ -332,14 +448,14 @@ footer {
         appearance: none; // 기본 브라우저에서 기본 스타일 제거
         width: 18px;
         height: 18px;
-        box-shadow: 0 0 0 2px #777; // 라인
+        box-shadow: 0 0 0 2px var(--input-radio-color); // 라인
         border-radius: 50%;
         outline: none; // focus 시에 나타나는 기본 스타일 제거
         cursor: pointer;
         &:checked {
-          background-color: #111; // 체크 시 내부 원 색상
-          border: 3px solid #fff; // 라인이 아닌, 라인과 원 사이 색상
-          box-shadow: 0 0 0 2px #000; // 라인
+          background-color: var(--basic-font-color); // 체크 시 내부 원 색상
+          border: 3px solid var(--basic-bg-color); // 라인이 아닌, 라인과 원 사이 색상
+          box-shadow: 0 0 0 2px var(--basic-font-color); // 라인
         }
       }
     }
@@ -369,7 +485,7 @@ footer {
     input,
     textarea {
       width: 100%;
-      border: 1px solid var(--border-color-1);
+      border: 1px solid var(--input-border-color);
       padding: 12px 16px;
       border-radius: 8px;
 
@@ -382,6 +498,8 @@ footer {
 
     input {
       height: 48px;
+      background-color: var(--input-bg-color);
+      color: var(--input-font-color);
     }
 
     textarea {
@@ -399,7 +517,8 @@ footer {
     font-weight: 600;
 
     &.active {
-      background-color: #000;
+      background-color: var(--basic-font-color);
+      color: var(--basic-bg-color);
     }
   }
 }
@@ -412,6 +531,15 @@ footer {
 
 #suneditor_editArea {
   width: 100% !important;
+  // border: 1px solid var(--input-border-color);
+  overflow: hidden;
+  border-radius: 8px;
+}
+[lightStatus="off"] #suneditor_editArea {
+  filter: invert(1);
+  // border: 1px solid var(--input-border-color);
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .detailHeaderTop {
@@ -471,18 +599,20 @@ footer {
         margin-top: 24px;
       }
       .whiteBtn {
-        background-color: #fff;
+        background-color: var(--button-white-btn-bg);
+        color: var(--button-white-btn-color);
+        border: 1px solid var(--button-border-color);
       }
       .blackBtn {
-        background-color: #000;
-        color: #fff;
+        background-color: var(--button-black-btn-bg);
+        color: var(--button-black-btn-color);
         border: none;
       }
     }
   }
 
   .popupInner {
-    background-color: #fff;
+    background-color: var(--popup-bg-color);
     border-radius: 1.5rem;
     padding: 1.5rem;
   }
