--- a/scss/select.scss
+++ b/scss/select.scss
@@ -1,10 +1,10 @@
 .selectBox {
   width: 7.5rem;
   height: 48px;
-  border: 1px solid var(--border-color-2);
+  border: 1px solid var(--input-border-color);
   border-radius: 8px;
-  background-color: #fff;
-  background-image: url("../img/down_fill_light_m.svg");
+  background-color: var(--input-bg-color);
+  background-image: var(--down-fill-bg);
   background-repeat: no-repeat;
   background-position: 90% center;
   font-size: var(--font-size-1);
@@ -19,6 +19,7 @@
     border: none;
     background-color: transparent;
     padding: 12px 16px;
+    color: var(--input-font-color);
   }
 
   .filterList {
@@ -27,9 +28,9 @@
     left: 0;
     z-index: 10;
 
-    border: 1px solid var(--border-color-2);
+    border: 1px solid var(--input-border-color);
     border-radius: 8px;
-    background-color: #fff;
+    background-color: var(--input-bg-color);
     width: 100%;
 
     display: none;
@@ -45,13 +46,13 @@
 
       &:hover {
         background-color: var(--bg-color-3);
-        color: var(--font-color-9);
+        color: var(--input-active-color);
       }
 
       &.active {
         background-color: var(--bg-color-3);
-        color: var(--font-color-9);
-        background-image: url("../img/check_outline_light_xs.svg");
+        color: var(--input-active-color);
+        background-image: var(--input-active-bg);
         background-repeat: no-repeat;
         background-position: 90% center;
         // order: -1;
