--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,8 +19,12 @@
   }
 }
 
+[lightStatus="off"] .navBottom.stickyAddStyle .filterSearchBox {
+  filter: invert(0);
+}
+
 .filterSearchBox {
-  // margin: 0 auto;
+  width: 100%;
   display: flex;
   gap: 8px;
   align-items: center;
@@ -29,10 +33,10 @@
   .selectBox {
     width: 7.5rem;
     height: 48px;
-    border: 1px solid var(--border-color-2);
+    border: 1px solid var(--input-border-color);
     border-radius: 8px;
-    background-color: #fff;
-    background-image: url("../img/down_fill_light_m.svg");
+    background-color: var(--input-bg-color);
+    background-image: var(--down-fill-bg);
     background-repeat: no-repeat;
     background-position: 90% center;
     font-size: var(--font-size-1);
@@ -47,6 +51,7 @@
       border: none;
       background-color: transparent;
       padding: 12px 16px;
+      color: var(--input-font-color);
     }
 
     .filterList {
@@ -55,9 +60,9 @@
       left: 0;
       z-index: 10;
 
-      border: 1px solid var(--border-color-2);
+      border: 1px solid var(--input-border-color);
       border-radius: 8px;
-      background-color: #fff;
+      background-color: var(--input-bg-color);
       width: 100%;
 
       display: none;
@@ -73,13 +78,13 @@
 
         &:hover {
           background-color: var(--bg-color-3);
-          color: var(--font-color-9);
+          color: var(--input-active-color);
         }
 
         &.active {
           background-color: var(--bg-color-3);
-          color: var(--font-color-9);
-          background-image: url("../img/check_outline_light_xs.svg");
+          color: var(--input-active-color);
+          background-image: var(--input-active-bg);
           background-repeat: no-repeat;
           background-position: 90% center;
           // order: -1;
@@ -88,19 +93,15 @@
     }
   }
 
-  .searchMobilePopBtn {
-    display: none;
-  }
-
   .searchBox {
     width: 21.25rem;
     height: 48px;
     border-radius: 48px;
-    background-color: #fff;
+    background-color: var(--input-bg-color);
     background-image: url("../img/search_outline_light_m.svg");
     background-position: 12px center;
     background-repeat: no-repeat;
-    border: 1px solid var(--border-color-2);
+    border: 1px solid var(--input-border-color);
     padding: 0px 20px 0px 40px;
     display: flex;
     align-items: baseline;
@@ -116,9 +117,11 @@
     input[type="search"] {
       border: none;
       width: 100%;
+      background-color: transparent;
+      color: var(--basic-font-color);
 
       &::placeholder {
-        color: var(--font-color-6);
+        color: var(--input-placeholder-color);
         font-size: var(--font-size-1);
         font-weight: 500;
       }
@@ -132,16 +135,20 @@
 .diaryWritePopBtn {
   width: 110px;
   height: 48px;
-  background-color: #000;
-  color: #fff;
+  background-image: var(--plus-icon);
+  background-position: 10px center;
+  background-repeat: no-repeat;
+  padding: 10px;
+  background-color: var(--button-black-btn-bg);
+  color: var(--button-black-btn-color);
   border-radius: 8px;
   border: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   font-size: var(--font-size-2);
   line-height: 24px;
-  align-self: flex-end;
+  margin-left: auto;
 }
 
 section {
@@ -169,6 +176,8 @@ section {
 
       li {
         position: relative;
+        border: 1px solid var(--list-border-color);
+        border-radius: 20px;
 
         a {
           display: block;
