다크모드 적용에 따른 미디어쿼리 스타일 추가

--- a/css/media.css
+++ b/css/media.css
@@ -139,40 +139,20 @@
   .navBottom.stickyAddStyle {
     justify-content: space-between;
   }
-  .navBottom.stickyAddStyle .filterSearchBox {
-    width: auto;
-  }
-  .navBottom.stickyAddStyle .filterSearchBox .searchMobilePopBtn {
+  .navBottom.stickyAddStyle .filterSearchBox .searchBox {
     display: none;
   }
+  .navBottom.stickyAddStyle .filterSearchBox .diaryWritePopBtn {
+    filter: invert(1);
+  }
   .navBottom .filterSearchBox {
-    width: 100%;
     justify-content: space-between;
   }
   .navBottom .filterSearchBox .searchBox {
     width: 100%;
-    height: 0;
-    transition: height 0.5s;
-    display: none;
-  }
-  .navBottom .filterSearchBox .searchBox.active {
     display: flex;
     height: 48px;
-    transition: height 0.5s;
-  }
-  .navBottom .filterSearchBox .searchMobilePopBtn {
-    width: 48px;
-    height: 48px;
-    display: block;
-    background-color: #fff;
-    background-image: url("../img/search_outline_light_m.svg");
-    background-position: center;
-    background-repeat: no-repeat;
-    border: 1px solid var(--border-color-2);
-    border-radius: 8px;
-  }
-  .navBottom .filterSearchBox .searchMobilePopBtn.active {
-    background-color: var(--bg-color-1);
+    order: -1;
   }
   .diaryWrite .moodTypeRadio .radioWrap {
     padding: 0 2px;
