--- a/scss/media.scss
+++ b/scss/media.scss
@@ -182,44 +182,23 @@
   .navBottom.stickyAddStyle {
     justify-content: space-between;
     .filterSearchBox {
-      width: auto;
-
-      .searchMobilePopBtn {
+      .searchBox {
         display: none;
+      }
+
+      .diaryWritePopBtn {
+        filter: invert(1);
       }
     }
   }
 
   .navBottom .filterSearchBox {
-    width: 100%;
     justify-content: space-between;
-
     .searchBox {
       width: 100%;
-      height: 0;
-      transition: height 0.5s;
-      display: none;
-
-      &.active {
-        display: flex;
-        height: 48px;
-        transition: height 0.5s;
-      }
-    }
-    .searchMobilePopBtn {
-      width: 48px;
+      display: flex;
       height: 48px;
-      display: block;
-      background-color: #fff;
-      background-image: url("../img/search_outline_light_m.svg");
-      background-position: center;
-      background-repeat: no-repeat;
-      border: 1px solid var(--border-color-2);
-      border-radius: 8px;
-
-      &.active {
-        background-color: var(--bg-color-1);
-      }
+      order: -1;
     }
   }
 
