--- a/Section7/css/index.css
+++ b/Section7/css/index.css
@@ -298,7 +298,7 @@ a {
 .CSS_등록상자 {
   border-radius: 1.6rem;
   background-color: #fff;
-  padding: 2.4rem;
+  padding: 0;
   text-align: left;
   font-size: 2.4rem;
   color: #000;
@@ -311,6 +311,7 @@ a {
   gap: 4rem;
   width: 100%;
   height: 100%;
+  padding: 2.4rem;
 }
 
 .CSS_등록상자_제목 {
