--- a/scss/gallery.scss
+++ b/scss/gallery.scss
@@ -6,6 +6,7 @@
 .galleryListWrap {
   max-width: 640px;
   margin: 0 auto;
+  padding-bottom: 2.5rem; // 40px
 }
 .galleryListWrap ul {
   display: flex;
