--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -165,109 +165,92 @@
 }
 .emotion_dropdown_layout {
   display: flex;
+  flex-direction: row;
   min-width: 20rem;
   max-width: 73rem;
   gap: 1rem 0.5rem;
   align-self: stretch;
-  flex-wrap: wrap;
   justify-content: space-between;
 }
-.dropdown_name {
-  height: 2rem;
+.dropdown_text {
   display: flex;
-  min-width: 7.5rem;
-  padding: 0.25rem;
-  flex-direction: column;
-  align-items: flex-start;
+  width: 7.5rem;
+  height: 3rem;
+  padding: 0.75rem 0.625rem;
+  flex-direction: row;
+  align-items: center;
   gap: 0.625rem;
   border-radius: 0.5rem;
-  border: 0.063rem solid var(--Gray-Gray-300, #c7c7c7);
-  background: var(--Gray-W, #fff);
+  border: 0.063rem solid var(--Gray-Gray-300, #C7C7C7);
+  background: var(--Gray-W, #FFF);
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
 }
-ul li {
-  list-style: none;
+.dropdown_name {
+  width: 7.5rem;
 }
-.dropdown_name_none_hover {
-  text-decoration: none;
+#photo_dropdown {
+  appearance: none;
+  --boxText: "기본형";
+  color: var(--Gray-Gray-900, #1C1C1C);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+}
+#photo_dropdown::after {
+  content: var(--boxText);
+}
+#mood_dropdown {
+  appearance: none;
+  --boxText: "전체";
+  color: var(--Gray-Gray-900, #1C1C1C);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+}
+#mood_dropdown::after {
+  content: var(--boxText);
+}
+.dropdown_name:hover .dropdown {
+  display: block;
+}
+.dropdown_img {
+  padding-bottom: 0.188rem;
+}
+.dropdown {
+  display: none;
+  list-style-type: none;
+  width: 7.5rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0.625rem;
+  border-radius: 0.5rem;
+  border: 0.063rem solid var(--Gray-Gray-300, #C7C7C7);
+  background: var(--Gray-W, #FFF);
+}
+.dropdown li {
+  width: 100%;
+  padding: 0.75rem;
+  cursor: pointer;
+}
+.dropdown li div {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.5rem;
-  letter-spacing: -0.1rem;
 }
-
-.dropdown_name_hover {
+.dropdown li:hover {
+  background: rgba(58, 181, 15, 0.05);
+  color: #299C00;
+}
+.dropdown li div > img {
+  width: 1rem;
   display: none;
 }
-.dropdown_name > ul > li > a {
-  text-decoration: none;
-  color: black;
+.dropdown li:hover .check{
+  display: block;
 }
-.dropdown_name > ul {
+.dropdown input {
   display: none;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.5rem;
-  letter-spacing: -0.1rem;
-}
-.dropdown_name > ul > li {
-  display: flex;
-  padding: 0.25rem 0.75rem;
-  justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
-  background: var(--Gray-Gray-100, #e4e4e4);
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.5rem;
-  letter-spacing: -0.1rem;
-}
-.dropdown_name:hover > #photo_filter_list {
-  display: block;
-  display: flex;
-  min-width: 7.5rem;
-  flex-direction: column;
-  align-items: flex-start;
-  position: absolute;
-  left: 1.24rem;
-  top: 3.2rem;
-  border-radius: 0.5rem;
-  border: none;
-  z-index: 100;
-}
-.dropdown_name:hover > #mood_list {
-  display: block;
-  display: flex;
-  min-width: 7.5rem;
-  flex-direction: column;
-  align-items: flex-start;
-  position: absolute;
-  left: 1.24rem;
-  top: 3.2rem;
-  border-radius: 0.5rem;
-  border: none;
-  z-index: 100;
-}
-.etc {
-  border-radius: 0 0 0.5rem 0.5rem;
-}
-.dropdown_name > ul:hover {
-  border-radius: 0.5rem;
-}
-.dropdown_name:hover {
-  border: 0.063rem solid var(--Gray-Gray-300, #c7c7c7);
-  background: var(--Gray-Gray-100, #e4e4e4);
-  border-radius: 0.5rem 0.5rem 0 0;
-  border: none;
-}
-.dropdown_name > ul > li:hover {
-  background-color: #f2f2f2;
 }
 .btn_register_diary {
   width: 6.875rem;
