--- a/Section7/css/index.css
+++ b/Section7/css/index.css
@@ -498,13 +498,24 @@ a {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  padding-left: 30px;
-  margin-right: 250px;
+  padding-left: 40px;
+  margin-right: 800px;
   background-image: url(../assets/images/search.png);
-  background-position: 5px center;
+  background-position: 10px;
   background-repeat: no-repeat;
 }
 
+.CSS_검색결과보여주는곳 {
+  width: 320px;
+  height: 48px;
+  font-size: 16px;
+  border-radius: 24px;
+  position: absolute;
+  text-align: center;
+  padding-top: 10px;
+  margin-top: 90px;
+  margin-left: 140px;
+}
 
 
 
