--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -186,6 +186,10 @@
   justify-content: space-between;
   margin-bottom: 0.5rem;
 }
+.dropdown_search_box {
+  display: flex;
+  gap: 1rem
+}
 .dropdown_name {
   width: 7.5rem;
 }
@@ -251,6 +255,36 @@
 }
 .dropdown input {
   display: none;
+}
+.search_box {
+  width: 22.5rem;
+}
+.search_bar {
+  padding: 0.75rem 1rem;
+  gap: 0.5rem;
+  border-radius: 6.25rem;
+  border: 0.063rem solid var(--Gray-Gray-300, #C7C7C7);
+  width: 100%;
+  display: flex;
+
+}
+.search_img {
+  width: 1.5rem;
+  height: 1.5rem;
+  padding-top: 0.063rem;
+}
+.search_bar input {
+  width: 100%;
+  border: none;
+  outline: none;
+}
+.search_bar input::placeholder {
+  color: var(--Gray-Gray-400, #ABABAB);
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: -0.01rem;
 }
 .btn_register_diary {
   width: 6.875rem;
